# libsWin32

./: README.md  pyproject.toml
libsWin32/CFML_api/: API_Atom_TypeDef.py  API_Crystal_Metrics.py  API_Crystallographic_Symmetry.py  API_Diffraction_Patterns.py  API_Error_Messages.py  API_IO_Formats.py  API_Reflections_Utilities.py  FortranBindedClass.py  PowderPatternSimulation.py  __init__.py
libsWin32/GSASII/: Absorb.py  G2compare.py  GSASII.py  GSASIIElem.py  GSASIIElemGUI.py  GSASIIIO.py  GSASIIIntPDFtool.py  GSASIIconstrGUI.py  GSASIIctrlGUI.py  GSASIIdataGUI.py  GSASIIddataGUI.py  GSASIIexprGUI.py  GSASIIfiles.py  GSASIIfpaGUI.py  GSASIIimage.py  GSASIIimgGUI.py  GSASIIindex.py  GSASIIlattice.py  GSASIImapvars.py  GSASIImath.py  GSASIImpsubs.py  GSASIIobj.py  GSASIIpath.py  GSASIIphsGUI.py  GSASIIplot.py  GSASIIpwd.py  GSASIIpwdGUI.py  GSASIIrestrGUI.py  GSASIIscriptable.py  GSASIIspc.py  GSASIIstrIO.py  GSASIIstrMain.py  GSASIIstrMath.py  InstallLog.txt  RunGSASII.bat  UpdateLog.txt  bootstrap.py  config_example.py  defaultIparms.py  fprime.py  (+1 more)
libsWin32/GSASII/CifFile/: CifFile.py
libsWin32/GSASII/bindist/: fellipse.cp37-win_amd64.pyd  histogram2d.cp37-win_amd64.pyd  histosigma2d.cp37-win_amd64.pyd  pack_f.cp37-win_amd64.pyd  polymask.cp37-win_amd64.pyd  pydiffax.cp37-win_amd64.pyd  pypowder.cp37-win_amd64.pyd  pytexture.cp37-win_amd64.pyd  spotmask.cp37-win_amd64.pyd  unpack_cbf.cp37-win_amd64.pyd
libsWin32/GSASII/exports/: G2export_CIF.py  G2export_PDB.py  G2export_csv.py  G2export_examples.py  G2export_pwdr.py
libsWin32/GSASII/imports/: G2img_1TIF.py  (+11 more)
